--- a/src/containers/Footer/Footer.css
+++ b/src/containers/Footer/Footer.css
@@ -1,8 +1,20 @@
 .footer-container {
     display: flex;
     flex-direction: column;
-    height: 5vh;
-    margin-top: 10px;
+    align-items: center;
     justify-content: center;
-    background-color: beige;
+    color: #fff;
+    text-transform: uppercase;
+    background-color: #000;
+    width: 100%;
+}
+
+.footer-container p {
+    text-transform: capitalize;
+}
+
+.footer-container h5 {
+    margin: 0;
+    padding: 10px;
+    font-size: 19px;
 }
