--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -1,8 +1,8 @@
 .header-container {
     display: flex;
-    justify-content: flex-start;
-    padding: 20px;
+    justify-content: space-between;
     height: 80px;
-    border-bottom: 3px solid #61dbfb;
-    background-color: #000;
+    background-color:  #2d3436;
+    background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+    width: 100%;
 }
