--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -6,3 +6,35 @@
   background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   width: 100%;
 }
+
+.content-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  margin-top: 50px;
+}
+
+@media (max-width: 600px) {
+  .content-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1000px) {
+  .content-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1300px) {
+  .content-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1300px) and (max-width: 1600px) {
+  .content-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
