--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -57,3 +57,15 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
 }
+
+@media screen and (max-width: 768px) {
+  .btn-search:focus ~ .input-search {
+    width: 150px;
+  }
+  .input-search::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 10px;
+    letter-spacing: 2px;
+    font-weight: 100;
+  }
+}
