--- a/src/containers/Footer/Footer.css
+++ b/src/containers/Footer/Footer.css
@@ -5,7 +5,7 @@
   justify-content: center;
   color: #fff;
   text-transform: uppercase;
-  background-color: #000;
+  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
   width: 100%;
 }
 
