--- a/src/components/HeaderLogo/HeaderLogo.css
+++ b/src/components/HeaderLogo/HeaderLogo.css
@@ -17,3 +17,14 @@
 a {
   text-decoration: none;
 }
+
+@media screen and (max-width: 768px) {
+  .header-logo img {
+    height: 28px;
+  }
+  .header-logo h1 {
+   font-size: 20px;
+   padding: 12px;
+   margin-left: 0px;
+  }
+}
